--- a/files/user_variables.yml
+++ b/files/user_variables.yml
@@ -25,7 +25,8 @@ debug: false
 glance_default_store: swift
 
 glance_swift_store_auth_version: 3
-glance_swift_store_auth_address: http://172.29.236.117:5000/v3
+# glance_swift_store_auth_address: http://172.29.236.102:5000/v3
+glance_swift_store_auth_address: '{{ '{{' }} auth_identity_uri {{ '}}' }}'
 glance_swift_store_container: glance_images
 glance_swift_store_endpoint_type: internalURL
 glance_swift_store_key: '{{ '{{' }} glance_service_password {{ '}}' }}'
